refactor: hexagonal architecture migration and code quality improvements
Complete migration to hexagonal architecture with comprehensive code quality improvements.

- 55 files changed: +624/-1678 lines (net -1054)
- All 188 tests passing with 90% code coverage
- Thread safety, charset encoding, Windows compatibility, exception handling improvements